force-app/main/default/objects/LTCourseProgram__c/LTCourseProgram__c.object-meta.xml
<CustomObject>
    <label>LT Course Program</label>
    <nameField>
        <label>LT Course Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LT Course Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>