force-app/main/default/objects/LTCourseProgram__c/fields/ApolloID__c.field-meta.xml
<CustomField>
    <fullName>ApolloID__c</fullName>
    <description>Used for Apollo ID</description>
    <label>Apollo ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>