force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>APTS_Accommodation_Type__c</fullName>
    <description>used for LT Accommodation Type, such as Residential or Homestay. Imported from Apollo based on each destination setup.</description>
    <label>Accommodation Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>