force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Course_Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Number_of_Weeks__c</fullName>
    <description>used for LT courses, where we need to display how many weeks the course is.</description>
    <label>Number Of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>