force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Course_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Type_Code__c</fullName>
    <description>Used for type of the LT Course</description>
    <label>Course Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>