force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Course_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Type_Name__c</fullName>
    <description>used for LT Course name</description>
    <label>Course Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>