force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>APTS_Destination_Country__c</fullName>
    <description>Used to specify the country where destination needs to be</description>
    <label>Destination Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>