force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Destination_Name__c</fullName>
    <description>used for destination name of the LT course</description>
    <label>Course Town (Destination Name)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>