force-app/main/default/objects/LTCourseProgram__c/fields/APTS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_End_Date__c</fullName>
    <description>It is used for selecting when the course is going to end</description>
    <label>Course End Date</label>
    <type>Date</type>
</CustomField>