force-app/main/default/objects/LTCourseProgram__c/fields/APTS_LT_Course_Price__c.field-meta.xml
<CustomField>
    <fullName>APTS_LT_Course_Price__c</fullName>
    <description>Used for displaying price mentioned in Poseidon</description>
    <label>CoursePrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>