force-app/main/default/objects/LTCourseProgram__c/fields/APTS_LTAgeGroup__c.field-meta.xml
<CustomField>
    <fullName>APTS_LTAgeGroup__c</fullName>
    <description>Use to specify LT specific age separation: Junior or Senior courses</description>
    <label>Age Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>