force-app/main/default/objects/LTCourseProgram__c/fields/APTS_LTCourseNumber__c.field-meta.xml
<CustomField>
    <fullName>APTS_LTCourseNumber__c</fullName>
    <description>used for LT course number coming from apollo, e.g. RUM456T etc.</description>
    <label>Course Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>