force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>APTS_Number_of_Days__c</fullName>
    <description>used for LT courses, where we need to display how many days the course is.</description>
    <label>Number Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>