force-app/main/default/objects/LTCourseProgram__c/fields/APTS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_Start_Date__c</fullName>
    <description>It is used for selecting when the course is going to start</description>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>