force-app/main/default/objects/LTCourseProgram__c/fields/Apttus_Config2_ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2_ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to match LT course with our SalesForce Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>LT Course Programs</relationshipLabel>
    <relationshipName>LT_Course_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>