force-app/main/default/objects/LTCourseProgram__c/fields/BrochureSeason__c.field-meta.xml
<CustomField>
    <fullName>BrochureSeason__c</fullName>
    <description>This field is used to select Brochure with respect to the course season</description>
    <label>Brochure Season</label>
    <length>100</length>
    <type>Text</type>
</CustomField>