force-app/main/default/objects/LTCourseProgram__c/fields/CourseStatus__c.field-meta.xml
<CustomField>
    <fullName>CourseStatus__c</fullName>
    <description>used for status of the LT</description>
    <label>Course Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>