force-app/main/default/objects/LTCourseProgram__c/fields/CS1EndDate__c.field-meta.xml
<CustomField>
    <fullName>CS1EndDate__c</fullName>
    <description>Used for end date of CS1 tour, LT only</description>
    <label>CS 1 End Date</label>
    <type>Date</type>
</CustomField>