force-app/main/default/objects/LTCourseProgram__c/fields/CS1Location__c.field-meta.xml
<CustomField>
    <fullName>CS1Location__c</fullName>
    <description>pre/post tour location</description>
    <label>CS 1 Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>