force-app/main/default/objects/LTCourseProgram__c/fields/CS1StartDate__c.field-meta.xml
<CustomField>
    <fullName>CS1StartDate__c</fullName>
    <description>Used for start date of CS1 tour, LT only</description>
    <label>CS 1 Start Date</label>
    <type>Date</type>
</CustomField>