force-app/main/default/objects/LTCourseProgram__c/fields/CS1Type__c.field-meta.xml
<CustomField>
    <fullName>CS1Type__c</fullName>
    <description>pre/post tour 1, LT only</description>
    <label>CS 1 Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>