force-app/main/default/objects/LTCourseProgram__c/fields/CS2EndDate__c.field-meta.xml
<CustomField>
    <fullName>CS2EndDate__c</fullName>
    <description>Used for end date of CS2 tour, LT only</description>
    <label>CS 2 End Date</label>
    <type>Date</type>
</CustomField>