force-app/main/default/objects/LTCourseProgram__c/fields/CS2Location__c.field-meta.xml
<CustomField>
    <fullName>CS2Location__c</fullName>
    <description>2nd pre/post tour, LT only</description>
    <label>CS 2 Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>