force-app/main/default/objects/LTCourseProgram__c/fields/CS2StartDate__c.field-meta.xml
<CustomField>
    <fullName>CS2StartDate__c</fullName>
    <description>Used for start date of CS2 tour, LT only</description>
    <label>CS 2 Start Date</label>
    <type>Date</type>
</CustomField>