force-app/main/default/objects/LTCourseProgram__c/fields/CS2Type__c.field-meta.xml
<CustomField>
    <fullName>CS2Type__c</fullName>
    <description>2nd pre/post tour, LT only</description>
    <label>CS 2 Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>