force-app/main/default/objects/LTCourseProgram__c/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <description>Used for mapping with destination code</description>
    <label>Destination Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>