force-app/main/default/objects/LTCourseProgram__c/fields/FreeSeats__c.field-meta.xml
<CustomField>
    <fullName>FreeSeats__c</fullName>
    <description>Used for checking number seats left</description>
    <label>Free Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>