force-app/main/default/objects/LTCourseProgram__c/fields/IDP__c.field-meta.xml
<CustomField>
    <fullName>IDP__c</fullName>
    <description>Used for specifying International Departure Point</description>
    <label>IDP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>