force-app/main/default/objects/LTCourseProgram__c/fields/LanguageTaught__c.field-meta.xml
<CustomField>
    <fullName>LanguageTaught__c</fullName>
    <description>Used for specifying the language to be taught</description>
    <label>Language Taught</label>
    <length>30</length>
    <type>Text</type>
</CustomField>