force-app/main/default/objects/LTCourseProgram__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Used for specifying the market</description>
    <label>Market</label>
    <length>20</length>
    <type>Text</type>
</CustomField>