force-app/main/default/objects/LTCourseProgram__c/fields/NetBKN__c.field-meta.xml
<CustomField>
    <fullName>NetBKN__c</fullName>
    <description>Used for checking Net Booking</description>
    <label>Net BKN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>