force-app/main/default/objects/LTCourseProgram__c/fields/TourPrice__c.field-meta.xml
<CustomField>
    <fullName>TourPrice__c</fullName>
    <description>Used for displaying total price of the Tour</description>
    <label>Tour Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>