force-app/main/default/objects/LTCourseProgram__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Used for displaying in which year course is taking place</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>